# nonebot-qq

./: .env  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
plugins/: ai.py
