[project]
name = "qq-bot"
version = "0.1.0"
description = "NoneBot QQ Bot with DeepSeek"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
